updated date/time input to be more user friendly and force a correct input

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
         <input type="text" name="location"/>
       </label>
       <label>
-        <span>Even Date/Time</span>
-        <input type="text" name="date" placeholder="1/1/2024, 12:00:00 AM"/>
+        <span>Even Date</span>
+        <input type="date" name="date"/>
+      </label>
+      <label>
+        <span>Even Time</span>
+        <input type="time" name="time"/>
       </label>
       <button type="submit">Add Event</button>
     </form>
